@@ -62,6 +62,8 @@ public abstract class AbstractMqttClientManager<T, C> implements ClientManager<T
 
 	private long disconnectCompletionTimeout = ClientManager.DISCONNECT_COMPLETION_TIMEOUT;
 
+	private long quiescentTimeout = ClientManager.QUIESCENT_TIMEOUT;
+
 	private boolean manualAcks;
 
 	private ApplicationEventPublisher applicationEventPublisher;
@@ -137,6 +139,20 @@ public abstract class AbstractMqttClientManager<T, C> implements ClientManager<T
 
 	protected long getDisconnectCompletionTimeout() {
 		return this.disconnectCompletionTimeout;
+	}
+
+	/**
+	 * Set the quiescentTimeout timeout when disconnecting.
+	 * Default is {@link ClientManager#QUIESCENT_TIMEOUT} milliseconds.
+	 * @param quiescentTimeout The timeout.
+	 * @since 7.0.0
+	 */
+	public void setQuiescentTimeout(long quiescentTimeout) {
+		this.quiescentTimeout = quiescentTimeout;
+	}
+
+	protected long getQuiescentTimeout() {
+		return this.quiescentTimeout;
 	}
 
 	@Override
